fix: blurring background and hovering go to top button
Took 50 minutes

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@
 
 * {
     font-family: "JetBrains Mono Medium", monospace;
-    /* Transisi global */
 }
 
 html {
@@ -29,20 +28,33 @@ html {
 }
 
 body {
-    background-image: url(../img/bgImage_vertical.jpeg);
-    background-attachment: fixed;
-    background-size: cover;
-    /*backdrop-filter: blur(3px);*/
-    margin: 0;
+    margin: 0 0 0 0;
     transition: background-image 0.1s ease-in-out;
 }
 
+.main-bg {
+    z-index: -1;
+    background-image: url(../img/bgImage_vertical.jpeg);
+    background-attachment: fixed;
+    background-size: cover;
+    transition: background-image 0.1s ease-in-out;
+}
+
+.main-bg-overlay {
+    padding: 7px 0 7px 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    backdrop-filter: blur(3px);
+    transition: backdrop-filter 0.1s ease-in-out;
+}
+
 .page-wrapper {
+    z-index: 0;
     max-width: 720px;
     min-width: 360px;
-    /*height: 100%;*/
-    margin-left: auto;
-    margin-right: auto;
+    height: 100%;
+    margin: 0 auto;
     border-left: 3px solid #2a2b2d;
     border-right: 3px solid #2a2b2d;
     justify-content: center;
@@ -275,7 +287,7 @@ a[href="#"] {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--whitish-bg-color);
+    background: var(--secondary-text-color);
     border-radius: 3px;
     margin: 5px 5px 5px 5px;
 }
@@ -287,7 +299,7 @@ a[href="#"] {
 ::-webkit-scrollbar-track {
     background: var(--secondary-bg-color);
     border-radius: 3px;
-    margin: 5px 5px 5px 5px
+    margin: 0 5px 0 5px
 }
 
 /* This helps the web components to be responsive, adjusting the scales in mobile */
@@ -295,6 +307,7 @@ a[href="#"] {
     body {
         font-size: 16px;
     }
+
     .contact-content img {
         width: 50px;
         height: auto;
@@ -308,10 +321,6 @@ a[href="#"] {
 }
 
 @media screen and (min-width: 769px) {
-    body {
-        padding: 7px 0 7px 0;
-    }
-
     .page-wrapper {
         border-radius: 15px 15px 15px 15px;
     }
@@ -319,11 +328,15 @@ a[href="#"] {
 
 /* When the desktop screen is wider than body's background image, change background image */
 @media screen and (min-width: 1920px) {
-    body {
+    .main-bg {
         background-image: url(../img/bgImage_horizontal.jpg);
     }
 
     .page-wrapper {
         box-shadow: -3px 3px 10px 0 rgba(var(--rgb-primary-purple-color), 0.3);
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: var(--primary-purple-color);
     }
 }
